--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="top-nav">
             <a class="top-nav-logo" href="/">
                 <img src="./favicon.png" alt="best web deverloper in sri lanka.">
-                <p>Hoolix<span> creative</span>
+                <p>Hoolix<span> Digital</span>
                 </p>
             </a>
             <nav class="top-nav-menu">
